--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "gbm-site",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
-  },
+  "version": "1.0.0",
+  "private": false,
+  "homepage": "https://gitbranchmanager.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "dependencies": {
+    "@blueprintjs/core": "3.30.0",
+    "@testing-library/jest-dom": "5.11.1",
+    "@testing-library/react": "10.4.7",
+    "@testing-library/user-event": "12.0.11",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "26.0.5",
+    "@types/lodash": "4.14.157",
+    "@types/node": "14.0.23",
+    "@types/node-sass": "4.11.1",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
+    "axios": "0.19.2",
+    "classnames": "2.2.6",
+    "csscomb": "^4.3.0",
+    "framer-motion": "^2.3.0",
+    "gh-pages": "3.1.0",
+    "lodash": "4.17.19",
+    "node-sass": "4.14.1",
+    "normalize.css": "8.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "react-snowfall": "1.0.2",
+    "typescript": "3.9.7"
   },
   "eslintConfig": {
     "extends": "react-app"
