--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": false,
   "homepage": "https://gitbranchmanager.com/",
   "dependencies": {
+    "@blueprintjs/core": "^3.22.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "classnames": "^2.2.6",
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
