--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-snowfall": "^1.0.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
