--- a/package.json
+++ b/package.json
@@ -11,25 +11,28 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.22.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/node-sass": "^4.11.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "classnames": "^2.2.6",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.13.0",
-    "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-snowfall": "^1.0.2",
-    "typescript": "~3.7.2"
+    "@blueprintjs/core": "3.25.0",
+    "@testing-library/jest-dom": "5.5.0",
+    "@testing-library/react": "10.0.2",
+    "@testing-library/user-event": "10.0.2",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "25.2.1",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "13.11.1",
+    "@types/node-sass": "4.11.0",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.6",
+    "axios": "0.19.2",
+    "classnames": "2.2.6",
+    "gh-pages": "2.2.0",
+    "lodash": "^4.17.15",
+    "node-sass": "4.13.1",
+    "normalize.css": "8.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "react-snowfall": "1.0.2",
+    "typescript": "3.8.3"
   },
   "eslintConfig": {
     "extends": "react-app"
