--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@blueprintjs/core": "3.25.0",
-    "@testing-library/jest-dom": "5.5.0",
-    "@testing-library/react": "10.0.2",
-    "@testing-library/user-event": "10.0.2",
+    "@blueprintjs/core": "3.30.0",
+    "@testing-library/jest-dom": "5.11.1",
+    "@testing-library/react": "10.4.7",
+    "@testing-library/user-event": "12.0.11",
     "@types/classnames": "2.2.10",
-    "@types/jest": "25.2.1",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "13.11.1",
-    "@types/node-sass": "4.11.0",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.6",
+    "@types/jest": "26.0.5",
+    "@types/lodash": "4.14.157",
+    "@types/node": "14.0.23",
+    "@types/node-sass": "4.11.1",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
     "axios": "0.19.2",
     "classnames": "2.2.6",
-    "gh-pages": "2.2.0",
-    "lodash": "^4.17.15",
-    "node-sass": "4.13.1",
+    "gh-pages": "3.1.0",
+    "lodash": "4.17.19",
+    "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
     "react-snowfall": "1.0.2",
-    "typescript": "3.8.3"
+    "typescript": "3.9.7"
   },
   "eslintConfig": {
     "extends": "react-app"
