--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "16.9.8",
     "axios": "0.19.2",
     "classnames": "2.2.6",
+    "csscomb": "^4.3.0",
+    "framer-motion": "^2.3.0",
     "gh-pages": "3.1.0",
     "lodash": "4.17.19",
     "node-sass": "4.14.1",
