--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gbm-site",
-  "version": "1.0.0",
+  "name": "devkitty",
+  "version": "1.1.1",
   "private": false,
-  "homepage": "https://gitbranchmanager.com/",
+  "homepage": "https://devkitty.app/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
