--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "4.17.19",
     "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
+    "particles-bg": "^2.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
