--- a/.github/workflows/devkittyCI.yml
+++ b/.github/workflows/devkittyCI.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Node 14
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
@@ -27,3 +32,12 @@ jobs:
           git config --global user.email 'egor-xyz@users.noreply.github.com'
           git commit -am "Publish release ${{ steps.get_version.outputs.VERSION }}"
           git push origin HEAD:master
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
