--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,6 @@
   "name": "Devkitty",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#fff",
   "background_color": "transparent"
 }
