--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@egor.xyz/eslint-config": "^1.6.0",
