--- a/package.json
+++ b/package.json
@@ -4,41 +4,51 @@
   "private": false,
   "homepage": "https://devkitty.app/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.46.0",
-    "@egor.xyz/eslint-config": "^0.0.8",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.1.9",
-    "@types/classnames": "^2.3.1",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^16.3.2",
-    "@types/node-sass": "^4.11.2",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/smoothscroll-polyfill": "^0.3.1",
-    "axios": "^0.21.1",
-    "classnames": "^2.3.1",
-    "clsx": "^1.1.1",
+    "@blueprintjs/core": "^5.0.1",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "csscomb": "^4.3.0",
-    "framer-motion": "^4.1.17",
-    "gh-pages": "^3.2.3",
+    "framer-motion": "^10.12.18",
+    "gh-pages": "^5.0.0",
     "lodash": "^4.17.21",
-    "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "smoothscroll-anchor-polyfill": "^1.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
-    "typescript": "^4.3.5"
+    "typescript": "^5.1.6",
+    "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@egor.xyz/eslint-config": "^1.6.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/smoothscroll-polyfill": "^0.3.1",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "sass": "^1.63.6",
+    "vite": "^4.4.2",
+    "vite-plugin-checker": "^0.6.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "browserslist": {
     "production": [
