--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist",
   },
   "dependencies": {
     "@blueprintjs/core": "^5.0.1",
