--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "devkitty",
+  "name": "devkitty-website",
+  "description": "Your Daily GitHub Desktop Assistant",
   "version": "2.0.0",
   "private": false,
+  "type": "module",
   "homepage": "https://devkitty.app/",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.0.1",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "clsx": "^1.2.1",
+    "@blueprintjs/core": "^5.10.0",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "csscomb": "^4.3.0",
-    "framer-motion": "^10.12.18",
-    "gh-pages": "^5.0.0",
+    "framer-motion": "^10.18.0",
+    "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -24,31 +26,23 @@
     "react-github-btn": "^1.4.0",
     "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
-    "typescript": "^5.1.6",
-    "zustand": "^4.3.9"
+    "typescript": "^5.4.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@egor.xyz/eslint-config": "^1.6.0",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/classnames": "^2.3.1",
-    "@types/jest": "^29.5.2",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.4.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/smoothscroll-polyfill": "^0.3.1",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-react-app": "^7.0.1",
-    "sass": "^1.63.6",
-    "vite": "^4.4.2",
-    "vite-plugin-checker": "^0.6.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^3.2.0",
-    "vite-tsconfig-paths": "^4.2.0"
+    "@egor.xyz/eslint-config": "^2.1.0",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
+    "@types/smoothscroll-polyfill": "^0.3.4",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "eslint": "^8.57.0",
+    "sass": "^1.71.1",
+    "vite": "^5.1.6",
+    "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "browserslist": {
     "production": [
