--- a/package.json
+++ b/package.json
@@ -6,43 +6,46 @@
   "type": "module",
   "homepage": "https://devkitty.app/",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
+    "lint": "eslint --fix",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.10.0",
-    "axios": "^1.6.7",
-    "clsx": "^2.1.0",
+    "@blueprintjs/core": "^5.18.0",
+    "@blueprintjs/icons": "^5.21.0",
+    "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "csscomb": "^4.3.0",
-    "framer-motion": "^10.18.0",
-    "gh-pages": "^6.1.1",
+    "framer-motion": "^12.6.3",
+    "gh-pages": "^6.3.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-github-btn": "^1.4.0",
     "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
-    "typescript": "^5.4.2",
-    "zustand": "^4.5.2"
+    "typescript": "^5.8.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@egor.xyz/eslint-config": "^2.1.0",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.11.26",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.21",
+    "@egor.xyz/eslint-config": "^3.5.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@types/smoothscroll-polyfill": "^0.3.4",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "eslint": "^8.57.0",
-    "sass": "^1.71.1",
-    "vite": "^5.1.6",
-    "vite-plugin-checker": "^0.6.4",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.1"
+    "@vitejs/plugin-react-swc": "^3.8.1",
+    "eslint": "^9.24.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.86.3",
+    "typescript-eslint": "^8.29.1",
+    "vite": "^6.2.5",
+    "vite-plugin-checker": "^0.9.1",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "browserslist": {
     "production": [
@@ -55,5 +58,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.8.0"
 }
