--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "dependencies": {
     "@blueprintjs/core": "^5.18.0",
     "@blueprintjs/icons": "^5.21.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "csscomb": "^4.3.0",
@@ -22,9 +28,9 @@
     "gh-pages": "^6.3.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-github-btn": "^1.4.0",
+    "react": "^19.1.0",
     "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
     "typescript": "^5.8.3",
@@ -34,18 +40,18 @@
     "@egor.xyz/eslint-config": "^3.5.0",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "@types/react": "^19.1.0",
     "@types/smoothscroll-polyfill": "^0.3.4",
     "@vitejs/plugin-react-swc": "^3.8.1",
     "eslint": "^9.24.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.86.3",
-    "typescript-eslint": "^8.29.1",
-    "vite": "^6.2.5",
+    "semantic-release": "^24.2.3",
     "vite-plugin-checker": "^0.9.1",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vite": "^6.2.5"
   },
   "browserslist": {
     "production": [
