--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-github-btn": "^1.4.0",
     "smoothscroll-anchor-polyfill": "^1.3.4",
     "smoothscroll-polyfill": "^0.4.4",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "zustand": "^5.0.3"
   },
@@ -45,7 +46,7 @@
     "@types/smoothscroll-polyfill": "^0.3.4",
     "@vitejs/plugin-react-swc": "^3.8.1",
     "eslint": "^9.24.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier": "^3.5.3",
     "sass": "^1.86.3",
     "semantic-release": "^24.2.3",
     "typescript-eslint": "^8.29.1",
