--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "convex": "^1.23.0",
     "csscomb": "^4.3.0",
     "framer-motion": "^12.6.3",
     "gh-pages": "^6.3.0",
